--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,5 +65,13 @@ stream {
         # Port Forwarding Settings
         ##
 
+        # Define custom log format for bandwidth monitoring
+        log_format proxy_bandwidth '$time_local $remote_addr:$remote_port -> $server_addr:$server_port '
+                                  'upstream: $upstream_addr '
+                                  'bytes_sent: $bytes_sent bytes_received: $bytes_received '
+                                  'upstream_bytes_sent: $upstream_bytes_sent upstream_bytes_received: $upstream_bytes_received '
+                                  'session_time: $session_time '
+                                  'protocol: $protocol';
+
         include /etc/nginx/streams/*.conf;
 }
