--- a/nginx/streams/2083.conf
+++ b/nginx/streams/2083.conf
@@ -1,24 +1,30 @@
-# TCP 2083 -> backend 8.219.123.14:4001
+# TCP 2083 -> backend 8.219.123.14:2083
 upstream backend_2083_tcp {
     server 8.219.123.14:2083;   # Replace with your backend if needed
 }
 
 server {
-    listen 0.0.0.0:2083;          # Listen on TCP/4001 (IPv4)
-    listen [::]:2083;             # Listen on TCP/4001 (IPv6)
+    listen 0.0.0.0:2083;          # Listen on TCP/2083 (IPv4)
+    listen [::]:2083;             # Listen on TCP/2083 (IPv6)
     proxy_connect_timeout 5s;     # Upstream connect timeout
     proxy_timeout 300s;           # Session timeout
     proxy_pass backend_2083_tcp;  # Forward to backend
+    
+    # Enable bandwidth logging
+    access_log /var/log/nginx/stream_2083_tcp_bandwidth.log proxy_bandwidth;
 }
 
-# UDP 2083 -> backend 8.219.123.14:4001 (e.g., QUIC/IPFS)
+# UDP 2083 -> backend 8.219.123.14:2083 (e.g., QUIC/IPFS)
 upstream backend_2083_udp {
     server 8.219.123.14:2083;   # Same backend for UDP
 }
 
 server {
-    listen 0.0.0.0:2083 udp;      # Listen on UDP/4001 (IPv4)
-    listen [::]:2083 udp;         # Listen on UDP/4001 (IPv6)
+    listen 0.0.0.0:2083 udp;      # Listen on UDP/2083 (IPv4)
+    listen [::]:2083 udp;         # Listen on UDP/2083 (IPv6)
     proxy_timeout 120s;           # UDP session timeout
     proxy_pass backend_2083_udp;  # Forward to backend
+    
+    # Enable bandwidth logging
+    access_log /var/log/nginx/stream_2083_udp_bandwidth.log proxy_bandwidth;
 }
