--- a/nginx/streams/4001.conf
+++ b/nginx/streams/4001.conf
@@ -9,6 +9,9 @@ server {
     proxy_connect_timeout 5s;     # Upstream connect timeout
     proxy_timeout 300s;           # Session timeout
     proxy_pass backend_4001_tcp;  # Forward to backend
+    
+    # Enable bandwidth logging
+    access_log /var/log/nginx/stream_4001_tcp_bandwidth.log proxy_bandwidth;
 }
 
 # UDP 4001 -> backend 192.154.96.230:4001 (e.g., QUIC/IPFS)
@@ -21,4 +24,7 @@ server {
     listen [::]:4001 udp;         # Listen on UDP/4001 (IPv6)
     proxy_timeout 120s;           # UDP session timeout
     proxy_pass backend_4001_udp;  # Forward to backend
+    
+    # Enable bandwidth logging
+    access_log /var/log/nginx/stream_4001_udp_bandwidth.log proxy_bandwidth;
 }
