--- a/nginx/streams/2053.conf
+++ b/nginx/streams/2053.conf
@@ -4,21 +4,27 @@ upstream backend_2053_tcp {
 }
 
 server {
-    listen 0.0.0.0:2053;          # Listen on TCP/4001 (IPv4)
-    listen [::]:2053;             # Listen on TCP/4001 (IPv6)
+    listen 0.0.0.0:2053;          # Listen on TCP/2053 (IPv4)
+    listen [::]:2053;             # Listen on TCP/2053 (IPv6)
     proxy_connect_timeout 5s;     # Upstream connect timeout
     proxy_timeout 300s;           # Session timeout
     proxy_pass backend_2053_tcp;  # Forward to backend
+    
+    # Enable bandwidth logging
+    access_log /var/log/nginx/stream_2053_tcp_bandwidth.log proxy_bandwidth;
 }
 
-# UDP 2053 -> backend 8.219.123.14:4001 (e.g., QUIC/IPFS)
+# UDP 2053 -> backend 8.219.123.14:2053 (e.g., QUIC/IPFS)
 upstream backend_2053_udp {
     server 8.219.123.14:2053;   # Same backend for UDP
 }
 
 server {
-    listen 0.0.0.0:2053 udp;      # Listen on UDP/4001 (IPv4)
-    listen [::]:2053 udp;         # Listen on UDP/4001 (IPv6)
+    listen 0.0.0.0:2053 udp;      # Listen on UDP/2053 (IPv4)
+    listen [::]:2053 udp;         # Listen on UDP/2053 (IPv6)
     proxy_timeout 120s;           # UDP session timeout
     proxy_pass backend_2053_udp;  # Forward to backend
+    
+    # Enable bandwidth logging
+    access_log /var/log/nginx/stream_2053_udp_bandwidth.log proxy_bandwidth;
 }
