--- a/nginx/logrotate.conf
+++ b/nginx/logrotate.conf
@@ -8,17 +8,25 @@
     # Keep 10 rotated files
     rotate 10
 
-    # Compress old logs
+    # Compress old logs to save space
     compress
     delaycompress
     notifempty
     create 0644 www-data www-data
     dateext
     missingok
+    
+    # Use shared scripts for multiple files
+    sharedscripts
 
     postrotate
-        if [ -f /var/run/nginx.pid ]; then
-            /bin/kill -USR1 `cat /var/run/nginx.pid`
+        # Try multiple methods to reload nginx gracefully
+        if [ -f /run/nginx.pid ]; then
+            /bin/kill -USR1 $(cat /run/nginx.pid) 2>/dev/null
+        elif [ -f /var/run/nginx.pid ]; then
+            /bin/kill -USR1 $(cat /var/run/nginx.pid) 2>/dev/null
+        elif systemctl is-active nginx >/dev/null 2>&1; then
+            systemctl reload nginx
         fi
     endscript
 }
