修复cron不支持时区的问题

--- a/nginx/streams/2053.conf
+++ b/nginx/streams/2053.conf
@@ -14,7 +14,7 @@ server {
     access_log /var/log/nginx/stream_2053_tcp_bandwidth.log proxy_bandwidth;
 }
 
-# UDP 2053 -> backend 8.219.123.14:2053 (e.g., QUIC/IPFS)
+# UDP 2053 -> backend 8.219.123.14:2053
 upstream backend_2053_udp {
     server 8.219.123.14:2053;   # Same backend for UDP
 }
