--- a/nginx/streams/4001.conf
+++ b/nginx/streams/4001.conf
@@ -14,7 +14,7 @@ server {
     access_log /var/log/nginx/stream_4001_tcp_bandwidth.log proxy_bandwidth;
 }
 
-# UDP 4001 -> backend 192.154.96.230:4001 (e.g., QUIC/IPFS)
+# UDP 4001 -> backend 192.154.96.230:4001
 upstream backend_4001_udp {
     server 192.154.96.230:4001;   # Same backend for UDP
 }
