--- a/nginx/streams/5201.conf
+++ b/nginx/streams/5201.conf
@@ -14,7 +14,7 @@ server {
     access_log /var/log/nginx/stream_5201_tcp_bandwidth.log proxy_bandwidth;
 }
 
-# UDP 5201 -> backend 192.154.96.230:5201 (e.g., QUIC/IPFS)
+# UDP 5201 -> backend 192.154.96.230:5201
 upstream backend_5201_udp {
     server 192.154.96.230:5201;   # Same backend for UDP
 }
