--- a/nginx/streams/2083.conf
+++ b/nginx/streams/2083.conf
@@ -14,7 +14,7 @@ server {
     access_log /var/log/nginx/stream_2083_tcp_bandwidth.log proxy_bandwidth;
 }
 
-# UDP 2083 -> backend 8.219.123.14:2083 (e.g., QUIC/IPFS)
+# UDP 2083 -> backend 8.219.123.14:2083
 upstream backend_2083_udp {
     server 8.219.123.14:2083;   # Same backend for UDP
 }
