Disable UDP configuration for backend 4001 in nginx

--- a/nginx/streams/4001.conf
+++ b/nginx/streams/4001.conf
@@ -15,16 +15,16 @@ server {
 }
 
 # UDP 4001 -> backend 192.154.96.230:4001
-upstream backend_4001_udp {
-    server 192.154.96.230:4001;   # Same backend for UDP
-}
+# upstream backend_4001_udp {
+#     server 192.154.96.230:4001;   # Same backend for UDP
+# }
 
-server {
-    listen 0.0.0.0:4001 udp;      # Listen on UDP/4001 (IPv4)
-    listen [::]:4001 udp;         # Listen on UDP/4001 (IPv6)
-    proxy_timeout 120s;           # UDP session timeout
-    proxy_pass backend_4001_udp;  # Forward to backend
+# server {
+#     listen 0.0.0.0:4001 udp;      # Listen on UDP/4001 (IPv4)
+#     listen [::]:4001 udp;         # Listen on UDP/4001 (IPv6)
+#     proxy_timeout 120s;           # UDP session timeout
+#     proxy_pass backend_4001_udp;  # Forward to backend
 
-    # Enable bandwidth logging
-    access_log /var/log/nginx/stream_4001_udp_bandwidth.log proxy_bandwidth;
-}
+#     # Enable bandwidth logging
+#     access_log /var/log/nginx/stream_4001_udp_bandwidth.log proxy_bandwidth;
+# }
