Add user server configurations for TCP ports 2053, 2083, 3001, 4001, and 5201 in nginx streams; remove configurations for ports 4002 and 5001.

--- a/nginx/streams/2053.conf
+++ b/nginx/streams/2053.conf
@@ -1,3 +1,5 @@
+# User server
+
 # TCP 2053 -> backend 8.219.123.14:2053
 upstream backend_2053_tcp {
     server 8.219.123.14:2053;   # Replace with your backend if needed
