--- a/nginx/streams/2083.conf
+++ b/nginx/streams/2083.conf
@@ -1,3 +1,5 @@
+# Gm server
+
 # TCP 2083 -> backend 8.219.123.14:2083
 upstream backend_2083_tcp {
     server 8.219.123.14:2083;   # Replace with your backend if needed
