--- a/nginx/streams/4001.conf
+++ b/nginx/streams/4001.conf
@@ -1,3 +1,5 @@
+# Pin server
+
 # TCP 4001 -> backend 142.171.197.90:4001
 upstream backend_4001_tcp {
     server 142.171.197.90:4001;   # Replace with your backend if needed
